--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@saeris/vue-spinners": "^1.0.8",
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.21.2",
         "particles-bg-vue": "^1.3.5",
