--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@popperjs/core": "^2.10.2",
+        "@saeris/vue-spinners": "^1.0.8",
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.21.2",
+        "dotenv": "^10.0.0",
         "particles-bg-vue": "^1.3.5",
+        "sqlite3": "^5.0.2",
         "vue": "^2.6.14",
         "vue-router": "^3.2.0"
     },
