--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "dependencies": {
         "@popperjs/core": "^2.10.2",
         "@saeris/vue-spinners": "^1.0.8",
+        "body-parser": "^1.19.0",
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.21.2",
+        "connect-flash": "^0.1.1",
+        "cookie-session": "^1.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
+        "express-session": "^1.17.2",
         "particles-bg-vue": "^1.3.5",
+        "passport": "^0.5.0",
+        "passport-local": "^1.0.0",
         "sqlite3": "^5.0.2",
         "vue": "^2.6.14",
         "vue-router": "^3.2.0"
