--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express-session": "^1.17.2",
+        "hcaptcha": "^0.1.0",
         "particles-bg-vue": "^1.3.5",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0",
         "sqlite3": "^5.0.2",
+        "vanilla-hcaptcha": "^1.0.0-alpha",
         "vue": "^2.6.14",
         "vue-router": "^3.2.0"
     },
