--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dotenv": "^10.0.0",
         "express-session": "^1.17.2",
         "hcaptcha": "^0.1.0",
+        "moment": "^2.29.1",
         "nodemailer": "^6.7.0",
         "particles-bg-vue": "^1.3.5",
         "passport": "^0.5.0",
