--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.21.2",
         "connect-flash": "^0.1.1",
+        "connect-history-api-fallback": "^1.6.0",
         "cookie-session": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
